infra/cluster/registry/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: registry
    spec:
      containers:
        - name: registry
          image: docker.io/registry:2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry
              mountPath: /var/lib/registry
            - name: registry-conf
              mountPath: /var/lib/registry-auth/registry.passwd
              subPath: registry.passwd
      volumes:
        - name: registry
          persistentVolumeClaim:
            claimName: registry
        - name: registry-conf
          configMap:
            name: registry
            items:
              - key: registry.passwd
                path: registry.passwd
