infra/cluster/registry/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app.kubernetes.io/name: registry
spec:
  selector:
    app.kubernetes.io/name: registry
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
