infra/cluster/registry/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 3g
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
  name: registry
  labels:
    app.kubernetes.io/name: registry
spec:
  rules:
    - host: r.compredict.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
